<resources>
    <string name="app_name">Yenguema</string>
    <string name="home_title">When life become easy by click</string>
    <string name="sprest">PrestS</string>
    <string name="makiti">Kâ Makiti</string>
    <string name="Ka_Doudhal">Ka Doudhal</string>
    <string name="jobs_title">Jobs</string>
    <string name="park_auto">Park Auto</string>
    <string name="carpooling">Transport</string>
    <string name="estate">Agent</string>
    <string name="home">Home</string>
    <string name="account">Compte</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_passwd">Forgot password</string>
    <string name="new_user">SignIn</string>
    <string name="LogIn">LogIn</string>
    <string name="logInActivity">LogIn</string>
    <string name="signInActivity">SignIn</string>
    <string name="gender_label">Gender</string>
    <string name="male">H</string>
    <string name="female">F</string>
    <string name="username">Your full name</string>
    <string name="confirm_passwd">Confirm the password</string>
    <string name="phone_number">Mobile ex:6xxxxxxxx</string>
    <string name="signIn">SignIn</string>
    <string name="err_email">Give your email</string>
    <string name="err_name">Give your full name</string>
    <string name="err_pass">Create a password</string>
    <string name="err_passC">The two passwords are different</string>
    <string name="err_phone">Renseignez votre numéro</string>
    <string name="err_phone_reg">Phone number not valid</string>
    <string name="no_email">No account linked with this email</string>
    <string name="bad_pwd">Invalid password</string>
    <string name="credentials">USER_CREDENTIALS_SHARED</string>
    <string name="user_email_shared">USER_EMAIL_SHARED</string>
    <string name="user_passwd_shared">USER_PASSWORD_SHARED</string>
    <string name="profile">Profile</string>
    <string name="login_txt">LogIn</string>
    <string name="hello">Hello,</string>
    <string name="dashboard">Dashboard</string>
    <string name="sale">Sale</string>
    <string name="teaching">Teaching</string>
    <string name="apply">Apply</string>
    <string name="car_dealership">Dealership</string>
    <string name="logOut">LogOut</string>
    <string name="activities">Activities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_title">Your dashboard</string>
    <string name="user_info">Your personals infos</string>
    <string name="edit">Edit</string>
    <string name="address">Provide the complete address of your work place</string>
    <string name="city">City :</string>
    <string name="municipality">Municipality :</string>
    <string name="district">District</string>
    <string name="contact">Provide your contact</string>
    <string name="p_phone_number">Phone Number :</string>
    <string name="fab_content_desc">Edit</string>
    <string name="title">Title/Name</string>
    <string name="details">More details about your service</string>
    <string name="images">Images</string>
    <string name="new_prest_s">If you are a service provider, you are in the right place to make your activity more benefit by register it here. Click on the button bellow. Your activity will be published on the platform just after the registration process</string>
    <string name="new_s_provider">Registration</string>
    <string name="service_man_provider">Service provider</string>
    <string name="category">Choose the category</string>
    <string name="registration">Validate</string>
    <string name="new_registration">New Service provider</string>
    <string name="workplace_address">Address</string>
    <string name="workplace_contact">Contact</string>
    <string name="emptyInput">This field should not be empty</string>
    <string name="wrongFormat">The phone number format is not valid</string>
    <string name="add_images">Last step, choose and add images of your work or a logo of your company. You can choose more than one image</string>
    <string name="next">Next</string>
    <string name="avatar_param_name">imageName</string>
    <string name="prest_s_name_label">Enter the name of your activity</string>
    <string name="address_title">Address of work place</string>
    <string name="contact_title">Your contact</string>
    <string-array name="prests_category">
        <item>Artisanat</item>
        <item>Blanchisseur</item>
        <item>Boulangerie</item>
        <item>Briqueterie</item>
        <item>Climatisation</item>
        <item>Cordonniers</item>
        <item>Déménagement</item>
        <item>Depannage</item>
        <item>Jardinage</item>
        <item>Electriciens</item>
        <item>Maçonnerie</item>
        <item>Menuisier</item>
        <item>Menuisier-metal</item>
        <item>Peintre</item>
        <item>Plomberie</item>
        <item>Coiffeur/se</item>
        <item>Couture</item>
        <item>Reparateur</item>
    </string-array>
</resources>