<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.form.prestSForm.NewPrestSFormStepTwo">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address_title"
        android:text="@string/address_title"
        style="@style/HomeTitle"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_label"
        android:text="@string/address"
        style="@style/LogInText"
        app:layout_constraintTop_toBottomOf="@id/address_title"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/city"
        android:hint="@string/city"
        android:drawableStart="@drawable/ic_city"
        android:drawablePadding="10dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_label"
        android:background="@drawable/custom_input"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="14sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/municipality"
        android:hint="@string/municipality"
        android:drawableStart="@drawable/ic_city"
        android:drawablePadding="10dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city"
        android:background="@drawable/custom_input"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="14sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/district"
        android:hint="@string/district"
        android:drawableStart="@drawable/ic_city"
        android:drawablePadding="10dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/municipality"
        android:background="@drawable/custom_input"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="14sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_btn"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/district"/>

</androidx.constraintlayout.widget.ConstraintLayout>