<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.form.prestSForm.NewPrestSFormStepContact">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_title"
        android:text="@string/contact_title"
        style="@style/HomeTitle"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact"
        android:text="@string/contact"
        style="@style/LogInText"
        app:layout_constraintTop_toBottomOf="@+id/contact_title"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/email"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact"
        android:background="@drawable/custom_input"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="14sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/phonenumber"
        android:hint="@string/phone_number"
        android:drawableStart="@drawable/ic_city"
        android:drawablePadding="10dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:background="@drawable/custom_input"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_label"
        android:text="@string/details"
        style="@style/LogInText"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/details"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_label"
        android:background="@drawable/custom_input"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:padding="5dp"
        android:textSize="14sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_btn"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details"/>
</androidx.constraintlayout.widget.ConstraintLayout>