<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.form.prestSForm.NewPrestSFormStepOne">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:text="@string/new_registration"
        style="@style/HomeTitle"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/prests_title_label"
        android:text="@string/prest_s_name_label"
        style="@style/LogInText"
        app:layout_constraintTop_toBottomOf="@+id/edit_title"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/prests_title"
        android:hint="@string/title"
        android:drawableStart="@drawable/ic_title"
        android:drawablePadding="10dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prests_title_label"
        android:background="@drawable/custom_input"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category"
        android:text="@string/category"
        style="@style/LogInText"
        app:layout_constraintTop_toBottomOf="@+id/prests_title"
        android:layout_marginTop="20dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/prests_category"
        android:hint="@string/category"
        android:drawableStart="@drawable/ic_category"
        android:drawablePadding="10dp"
        android:ems="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:background="@drawable/custom_input"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:textSize="14sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_btn"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prests_category"/>

</androidx.constraintlayout.widget.ConstraintLayout>