<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewPrestSFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_title"
                android:text="@string/new_registration"
                style="@style/HomeTitle"
                app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/prests_title"
                android:hint="@string/title"
                android:drawableStart="@drawable/ic_title"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_title"
                android:background="@drawable/custom_input"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category"
                android:text="@string/category"
                style="@style/LogInText"
                app:layout_constraintTop_toBottomOf="@+id/prests_title"
                android:layout_marginTop="20dp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/prests_category"
                android:hint="@string/category"
                android:drawableStart="@drawable/ic_category"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category"
                android:background="@drawable/custom_input"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:text="@string/address"
                style="@style/LogInText"
                app:layout_constraintTop_toBottomOf="@+id/prests_category"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/city"
                android:hint="@string/city"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address"
                android:background="@drawable/custom_input"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/municipality"
                android:hint="@string/municipality"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city"
                android:background="@drawable/custom_input"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/district"
                android:hint="@string/district"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/municipality"
                android:background="@drawable/custom_input"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contact"
                android:text="@string/contact"
                style="@style/LogInText"
                app:layout_constraintTop_toBottomOf="@+id/district"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact"
                android:background="@drawable/custom_input"
                android:inputType="textEmailAddress"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/phonenumber"
                android:hint="@string/phone_number"
                android:drawableStart="@drawable/ic_city"
                android:drawablePadding="10dp"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                android:background="@drawable/custom_input"
                android:inputType="phone"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_label"
                android:text="@string/details"
                style="@style/LogInText"
                app:layout_constraintTop_toBottomOf="@+id/phonenumber"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/details"
                android:ems="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_label"
                android:background="@drawable/custom_input"
                android:inputType="textMultiLine"
                android:layout_marginTop="10dp"
                android:scrollbars="vertical"
                android:padding="5dp"
                android:textSize="14sp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_btn"
                android:text="@string/registration"
                app:layout_constraintTop_toBottomOf="@id/details"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>