<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/sign_in_img"
        android:src="@drawable/login_foreground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="10dp"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_form"
        android:background="@drawable/custom_input"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_img"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/gender_label"
            android:layout_marginEnd="5dp"
            style="@style/HomeTitle"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/gender_label">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/male_gender"
                style="@style/LogInText"
                android:text="@string/male"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/female_gender"
                style="@style/LogInText"
                android:text="@string/female"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputs"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_form"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/user_email"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/custom_input"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/user_name"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_user_name"
            android:drawablePadding="10dp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_email"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/user_password"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/password_confirm"
            android:hint="@string/confirm_passwd"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_password"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/phonenumber"
            android:hint="@string/phone_number"
            android:drawableStart="@drawable/ic_contact_phone"
            android:drawablePadding="10dp"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_confirm"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:inputType="phone"
            android:padding="5dp"
            android:textSize="14sp"/>
        <Button
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phonenumber"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/signIn"
            style="@style/ServicesItem"
            android:id="@+id/sign_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>