<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <ImageView
        android:id="@+id/login_img"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="25dp"
        android:src="@mipmap/new_user_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_img">
        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:background="@drawable/custom_input"
            android:drawablePadding="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="14sp" />
        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_marginTop="80dp"
            android:layout_height="60dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:background="@drawable/custom_input"
            android:drawablePadding="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/LogIn"
            style="@style/ServicesItem"
            android:id="@+id/login_btn"
            android:layout_marginTop="140dp"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_user"
        android:focusable="true"
        android:clickable="true"
        android:text="@string/new_user"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/login_input"
        style="@style/LogInText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_password"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forget_passwd"
        android:layout_marginTop="10dp"
        style="@style/LogInText"
        android:textAlignment="textEnd"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_input"/>
</androidx.constraintlayout.widget.ConstraintLayout>